// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`example.js [espree] format 1`] = `
"'super' keyword outside a method (1:1)
> 1 | super();
    | ^
  2 |"
`;

exports[`example.js [meriyah] format 1`] = `
"[1:6]: Calls to super must be in the \\"constructor\\" method of a class expression or class declaration that has a superclass (1:6)
> 1 | super();
    |      ^
  2 |"
`;

exports[`example.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
super();

=====================================output=====================================
super();

================================================================================
`;
